# Founder-wall

backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  init-letsencrypt.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py  models.py
backend/app/analytics/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/auth/: __init__.py  dependencies.py  google.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/moderation/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  screener.py  service.py
backend/app/realtime/: __init__.py  manager.py  pubsub.py  router.py  schemas.py
backend/app/shared/: __init__.py  config.py  container.py  database.py  dependencies.py  exceptions.py  health.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py
backend/app/stats/: __init__.py  counters.py  dependencies.py  router.py  schemas.py  service.py
backend/app/users/: __init__.py  dependencies.py  models.py  repository.py  schemas.py  service.py
backend/app/wall/: __init__.py  dependencies.py  (+6 more)
backend/docs/: BACKUP_DR.md  MONITORING.md  PRODUCTION.md  VPS_DEPLOY.md
backend/loadtest/: locustfile.py
backend/nginx/: nginx.conf
backend/scripts/: backup.sh  check-env.sh  devserver.py  entrypoint.sh  loadtest.py  monitor.sh  smoke-test.sh  smoke.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_concurrency.py  test_health.py  test_migrations.py  test_moderation.py  test_realtime.py  test_security.py  test_stats.py  test_wall.py
(+48 files in other folders)
